# screenshot-maker

./: Dockerfile  README.MD  docker-compose.yml  logger.py  main.py  nginx.conf  pyproject.toml  screenshot_maker.py  task.md
